--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "test": "DATABASE_URL='postgres://localhost/music-api-testing-db' mocha models.spec.js",
+    "test:dev": "nodemon --exec npm run test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.6",
     "express": "^4.18.1",
+    "mocha": "^10.0.0",
     "pg": "^8.8.0",
     "sequelize": "^6.21.4"
   },
